orion_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: test
  name: broker
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: broker
    spec:
      containers:
      
      - name: orion
        image: csp2-centos-1:5000/img_fiware-orion_v2.2.0:${CICD_EXECUTION_SEQUENCE}
        resources:
         limits:
          memory: "1Gi"
          cpu: "1000m"
         requests:
          memory: "500Mi"
          cpu: "500m"
        ports:
        - containerPort: 1026
        args: ["-dbhost", "mongo-1.mongo,mongo-0.mongo,mongo-2.mongo", "-rplSet" ,"rs0", "-logLevel", "DEBUG"]
