orion_service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: fiware
  name: orion-service
  labels:
    name: orionservice-nodeport-svc
spec:
  type: NodePort
  ports:
    - port: 1026
      nodePort: 30160
      name: http
    - port: 443
      nodePort: 31449
      name: https
  selector:
    name: broker
