Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: orion-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: orion-service
            servicePort: 30180
